--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
+    <meta
+      name="description"
+      content="StarkHacks - The world's largest hardware hackathon. April 17-19, 2026."
+    />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover">
-    <div style="display: contents">%sveltekit.body%</div>
+  <body
+    data-sveltekit-preload-data="hover"
+    style="background-color: transparent"
+  >
+    <div style="display: contents; background-color: transparent">
+      %sveltekit.body%
+    </div>
   </body>
 </html>
