--- a/src/app.html
+++ b/src/app.html
@@ -11,10 +11,81 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
+
+    <!-- Primary Meta Tags -->
+    <title>StarkHacks 2026</title>
+    <meta
+      name="title"
+      content="StarkHacks 2026 - World's Largest Hardware Hackathon | Guinness World Record | Purdue University"
+    />
     <meta
       name="description"
-      content="StarkHacks - The world's largest hardware hackathon. April 17-19, 2026."
+      content="Join StarkHacks 2026 on April 17, 2026 at Purdue University in West Lafayette, Indiana. The world's largest hardware hackathon organized by Humanoid Robot Club Purdue, setting an official Guinness World Record. Build innovative hardware projects, compete for prizes, and be part of history."
     />
+    <meta
+      name="keywords"
+      content="StarkHacks, hardware hackathon, world's largest hackathon, Guinness World Record, Purdue University, West Lafayette, Indiana, Humanoid Robot Club Purdue, robotics hackathon, hardware innovation, embedded systems, IoT hackathon, hardware competition, April 2026, Purdue hackathon, robotics competition, hardware development, maker event, hardware engineering"
+    />
+    <meta name="author" content="Humanoid Robot Club Purdue" />
+    <meta
+      name="robots"
+      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
+    />
+    <meta name="theme-color" content="#000000" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://starkhacks.com" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://starkhacks.com" />
+    <meta
+      property="og:title"
+      content="StarkHacks 2026 - World's Largest Hardware Hackathon | Guinness World Record"
+    />
+    <meta
+      property="og:description"
+      content="Join the world's largest hardware hackathon on April 17, 2026 at Purdue University. Organized by Humanoid Robot Club Purdue. Setting an official Guinness World Record. Build innovative hardware projects and be part of history."
+    />
+    <meta
+      property="og:image"
+      content="%sveltekit.assets%/hero-background.jpg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:image:alt"
+      content="StarkHacks 2026 - World's Largest Hardware Hackathon"
+    />
+    <meta property="og:site_name" content="StarkHacks" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://starkhacks.com" />
+    <meta
+      name="twitter:title"
+      content="StarkHacks 2026 - World's Largest Hardware Hackathon | Guinness World Record"
+    />
+    <meta
+      name="twitter:description"
+      content="Join the world's largest hardware hackathon on April 17, 2026 at Purdue University. Organized by Humanoid Robot Club Purdue. Setting an official Guinness World Record."
+    />
+    <meta
+      name="twitter:image"
+      content="%sveltekit.assets%/hero-background.jpg"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="StarkHacks 2026 - World's Largest Hardware Hackathon"
+    />
+
+    <!-- Additional Meta Tags -->
+    <meta name="geo.region" content="US-IN" />
+    <meta name="geo.placename" content="West Lafayette" />
+    <meta name="geo.position" content="40.4237;-86.9212" />
+    <meta name="ICBM" content="40.4237, -86.9212" />
+
     %sveltekit.head%
   </head>
   <body
