--- a/src/app.html
+++ b/src/app.html
@@ -13,18 +13,18 @@
     />
 
     <!-- Primary Meta Tags -->
-    <title>StarkHacks 2026</title>
+    <title>StarkHacks</title>
     <meta
       name="title"
-      content="StarkHacks 2026 - World's Largest Hardware Hackathon | Guinness World Record | Purdue University"
+      content="StarkHacks - World's Largest Hardware Hackathon | Guinness World Record | Purdue University"
     />
     <meta
       name="description"
-      content="Join StarkHacks 2026 on April 17, 2026 at Purdue University in West Lafayette, Indiana. The world's largest hardware hackathon organized by Humanoid Robot Club Purdue, setting an official Guinness World Record. Build innovative hardware projects, compete for prizes, and be part of history."
+      content="Join StarkHacks on April 17 at Purdue University in West Lafayette, Indiana. The world's largest hardware hackathon organized by Humanoid Robot Club Purdue, setting an official Guinness World Record. Build innovative hardware projects, compete for prizes, and be part of history."
     />
     <meta
       name="keywords"
-      content="StarkHacks, hardware hackathon, world's largest hackathon, Guinness World Record, Purdue University, West Lafayette, Indiana, Humanoid Robot Club Purdue, robotics hackathon, hardware innovation, embedded systems, IoT hackathon, hardware competition, April 2026, Purdue hackathon, robotics competition, hardware development, maker event, hardware engineering"
+      content="StarkHacks, hardware hackathon, world's largest hackathon, Guinness World Record, Purdue University, West Lafayette, Indiana, Humanoid Robot Club Purdue, robotics hackathon, hardware innovation, embedded systems, IoT hackathon, hardware competition, April, Purdue hackathon, robotics competition, hardware development, maker event, hardware engineering"
     />
     <meta name="author" content="Humanoid Robot Club Purdue" />
     <meta
@@ -41,11 +41,11 @@
     <meta property="og:url" content="https://starkhacks.com" />
     <meta
       property="og:title"
-      content="StarkHacks 2026 - World's Largest Hardware Hackathon | Guinness World Record"
+      content="StarkHacks - World's Largest Hardware Hackathon | Guinness World Record"
     />
     <meta
       property="og:description"
-      content="Join the world's largest hardware hackathon on April 17, 2026 at Purdue University. Organized by Humanoid Robot Club Purdue. Setting an official Guinness World Record. Build innovative hardware projects and be part of history."
+      content="Join the world's largest hardware hackathon on April 17 at Purdue University. Organized by Humanoid Robot Club Purdue. Setting an official Guinness World Record. Build innovative hardware projects and be part of history."
     />
     <meta
       property="og:image"
@@ -55,7 +55,7 @@
     <meta property="og:image:height" content="630" />
     <meta
       property="og:image:alt"
-      content="StarkHacks 2026 - World's Largest Hardware Hackathon"
+      content="StarkHacks - World's Largest Hardware Hackathon"
     />
     <meta property="og:site_name" content="StarkHacks" />
     <meta property="og:locale" content="en_US" />
@@ -65,11 +65,11 @@
     <meta name="twitter:url" content="https://starkhacks.com" />
     <meta
       name="twitter:title"
-      content="StarkHacks 2026 - World's Largest Hardware Hackathon | Guinness World Record"
+      content="StarkHacks - World's Largest Hardware Hackathon | Guinness World Record"
     />
     <meta
       name="twitter:description"
-      content="Join the world's largest hardware hackathon on April 17, 2026 at Purdue University. Organized by Humanoid Robot Club Purdue. Setting an official Guinness World Record."
+      content="Join the world's largest hardware hackathon on April 17 at Purdue University. Organized by Humanoid Robot Club Purdue. Setting an official Guinness World Record."
     />
     <meta
       name="twitter:image"
@@ -77,7 +77,7 @@
     />
     <meta
       name="twitter:image:alt"
-      content="StarkHacks 2026 - World's Largest Hardware Hackathon"
+      content="StarkHacks - World's Largest Hardware Hackathon"
     />
 
     <!-- Additional Meta Tags -->
