--- a/src/app.html
+++ b/src/app.html
@@ -27,18 +27,21 @@
     />
 
     <!-- Primary Meta Tags -->
-    <title>StarkHacks</title>
+    <title>
+      StarkHacks - Purdue Hardware Hackathon | World's Largest Hardware
+      Hackathon | Indiana
+    </title>
     <meta
       name="title"
-      content="StarkHacks - World's Largest Hardware Hackathon | Guinness World Record | Purdue University"
+      content="StarkHacks - Purdue Hardware Hackathon | World's Largest Hardware Hackathon | Indiana"
     />
     <meta
       name="description"
-      content="Join StarkHacks on April 17 at Purdue University in West Lafayette, Indiana. The world's largest hardware hackathon organized by Humanoid Robot Club Purdue, setting an official Guinness World Record. Build innovative hardware projects, compete for prizes, and be part of history."
+      content="Join StarkHacks, the world's largest hardware hackathon at Purdue University in West Lafayette, Indiana. This Purdue hardware hackathon is organized by Humanoid Robot Club Purdue and will set an official Guinness World Record. Build innovative hardware projects, compete for $100K in prizes, and be part of history on April 17-19, 2026."
     />
     <meta
       name="keywords"
-      content="StarkHacks, hardware hackathon, world's largest hackathon, Guinness World Record, Purdue University, West Lafayette, Indiana, Humanoid Robot Club Purdue, robotics hackathon, hardware innovation, embedded systems, IoT hackathon, hardware competition, April, Purdue hackathon, robotics competition, hardware development, maker event, hardware engineering"
+      content="hardware hackathon, purdue hardware hackathon, purdue hackathon, world's largest hardware hackathon, indiana hardware hackathon, hardware hackathon purdue, purdue university hackathon, hardware hackathon indiana, world's largest hackathon, Guinness World Record, Purdue University, West Lafayette, Indiana, Humanoid Robot Club Purdue, robotics hackathon, hardware innovation, embedded systems, IoT hackathon, hardware competition, April, robotics competition, hardware development, maker event, hardware engineering, purdue robotics hackathon, indiana hackathon, hardware event purdue"
     />
     <meta name="author" content="Humanoid Robot Club Purdue" />
     <meta
@@ -55,11 +58,11 @@
     <meta property="og:url" content="https://starkhacks.com" />
     <meta
       property="og:title"
-      content="StarkHacks - World's Largest Hardware Hackathon | Guinness World Record"
+      content="StarkHacks - Purdue Hardware Hackathon | World's Largest Hardware Hackathon"
     />
     <meta
       property="og:description"
-      content="Join the world's largest hardware hackathon on April 17 at Purdue University. Organized by Humanoid Robot Club Purdue. Setting an official Guinness World Record. Build innovative hardware projects and be part of history."
+      content="Join StarkHacks, the world's largest hardware hackathon at Purdue University in Indiana. This Purdue hardware hackathon will set an official Guinness World Record. Build innovative hardware projects, compete for $100K in prizes, and be part of history on April 17-19, 2026."
     />
     <meta
       property="og:image"
@@ -79,11 +82,11 @@
     <meta name="twitter:url" content="https://starkhacks.com" />
     <meta
       name="twitter:title"
-      content="StarkHacks - World's Largest Hardware Hackathon | Guinness World Record"
+      content="StarkHacks - Purdue Hardware Hackathon | World's Largest Hardware Hackathon"
     />
     <meta
       name="twitter:description"
-      content="Join the world's largest hardware hackathon on April 17 at Purdue University. Organized by Humanoid Robot Club Purdue. Setting an official Guinness World Record."
+      content="Join StarkHacks, the world's largest hardware hackathon at Purdue University in Indiana. This Purdue hardware hackathon will set an official Guinness World Record. Build innovative hardware projects and compete for $100K in prizes."
     />
     <meta
       name="twitter:image"
