Improve SEO: Update title to StarkHacks, enhance description with world's largest hardware hackathon, fix favicon configuration

--- a/src/app.html
+++ b/src/app.html
@@ -16,10 +16,20 @@
       })(window, document, "script", "dataLayer", "GTM-5ZTLDNHN");
     </script>
     <!-- End Google Tag Manager -->
+    <!-- Favicons -->
     <link
       rel="icon"
       href="%sveltekit.assets%/StarkHacks.svg"
       type="image/svg+xml"
+    />
+    <link
+      rel="shortcut icon"
+      href="%sveltekit.assets%/StarkHacks.svg"
+      type="image/svg+xml"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="%sveltekit.assets%/StarkHacks.svg"
     />
     <meta
       name="viewport"
@@ -27,17 +37,14 @@
     />
 
     <!-- Primary Meta Tags -->
-    <title>
-      StarkHacks - Purdue Hardware Hackathon | World's Largest Hardware
-      Hackathon | Indiana
-    </title>
+    <title>StarkHacks</title>
     <meta
       name="title"
-      content="StarkHacks - Purdue Hardware Hackathon | World's Largest Hardware Hackathon | Indiana"
+      content="StarkHacks"
     />
     <meta
       name="description"
-      content="Join StarkHacks, the world's largest hardware hackathon at Purdue University in West Lafayette, Indiana. This Purdue hardware hackathon is organized by Humanoid Robot Club Purdue and will set an official Guinness World Record. Build innovative hardware projects, compete for $100K in prizes, and be part of history on April 17-19, 2026."
+      content="World's largest hardware hackathon at Purdue University. Join StarkHacks on April 17-19, 2026 in West Lafayette, Indiana. This Purdue hardware hackathon will set an official Guinness World Record. Build innovative hardware projects, compete for $100K in prizes, and be part of history."
     />
     <meta
       name="keywords"
@@ -58,11 +65,11 @@
     <meta property="og:url" content="https://starkhacks.com" />
     <meta
       property="og:title"
-      content="StarkHacks - Purdue Hardware Hackathon | World's Largest Hardware Hackathon"
+      content="StarkHacks"
     />
     <meta
       property="og:description"
-      content="Join StarkHacks, the world's largest hardware hackathon at Purdue University in Indiana. This Purdue hardware hackathon will set an official Guinness World Record. Build innovative hardware projects, compete for $100K in prizes, and be part of history on April 17-19, 2026."
+      content="World's largest hardware hackathon at Purdue University. Join StarkHacks on April 17-19, 2026 in West Lafayette, Indiana. This Purdue hardware hackathon will set an official Guinness World Record. Build innovative hardware projects, compete for $100K in prizes, and be part of history."
     />
     <meta
       property="og:image"
@@ -82,11 +89,11 @@
     <meta name="twitter:url" content="https://starkhacks.com" />
     <meta
       name="twitter:title"
-      content="StarkHacks - Purdue Hardware Hackathon | World's Largest Hardware Hackathon"
+      content="StarkHacks"
     />
     <meta
       name="twitter:description"
-      content="Join StarkHacks, the world's largest hardware hackathon at Purdue University in Indiana. This Purdue hardware hackathon will set an official Guinness World Record. Build innovative hardware projects and compete for $100K in prizes."
+      content="World's largest hardware hackathon at Purdue University. Join StarkHacks on April 17-19, 2026 in West Lafayette, Indiana. This Purdue hardware hackathon will set an official Guinness World Record. Build innovative hardware projects and compete for $100K in prizes."
     />
     <meta
       name="twitter:image"
