Remove banner image from search results and update description to About section text

--- a/src/app.html
+++ b/src/app.html
@@ -44,7 +44,7 @@
     />
     <meta
       name="description"
-      content="World's largest hardware hackathon at Purdue University. Join StarkHacks on April 17-19, 2026 in West Lafayette, Indiana. This Purdue hardware hackathon will set an official Guinness World Record. Build innovative hardware projects, compete for $100K in prizes, and be part of history."
+      content="Stark Hacks is the world's largest hardware hackathon and the premier Purdue hardware hackathon, a 36-hour engineering marathon where ideas come off the screen and into real circuits. This Indiana hardware hackathon brings together hundreds of students from Purdue University and beyond to build innovative hardware projects. Organized by the Humanoid Robot Club at Purdue University, we're setting an official World Record for World's Largest Hardware Hackathon."
     />
     <meta
       name="keywords"
@@ -69,23 +69,13 @@
     />
     <meta
       property="og:description"
-      content="World's largest hardware hackathon at Purdue University. Join StarkHacks on April 17-19, 2026 in West Lafayette, Indiana. This Purdue hardware hackathon will set an official Guinness World Record. Build innovative hardware projects, compete for $100K in prizes, and be part of history."
-    />
-    <meta
-      property="og:image"
-      content="%sveltekit.assets%/hero-background.jpg"
-    />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta
-      property="og:image:alt"
-      content="StarkHacks - World's Largest Hardware Hackathon"
+      content="Stark Hacks is the world's largest hardware hackathon and the premier Purdue hardware hackathon, a 36-hour engineering marathon where ideas come off the screen and into real circuits. This Indiana hardware hackathon brings together hundreds of students from Purdue University and beyond to build innovative hardware projects. Organized by the Humanoid Robot Club at Purdue University, we're setting an official World Record for World's Largest Hardware Hackathon."
     />
     <meta property="og:site_name" content="StarkHacks" />
     <meta property="og:locale" content="en_US" />
 
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:url" content="https://starkhacks.com" />
     <meta
       name="twitter:title"
@@ -93,15 +83,7 @@
     />
     <meta
       name="twitter:description"
-      content="World's largest hardware hackathon at Purdue University. Join StarkHacks on April 17-19, 2026 in West Lafayette, Indiana. This Purdue hardware hackathon will set an official Guinness World Record. Build innovative hardware projects and compete for $100K in prizes."
-    />
-    <meta
-      name="twitter:image"
-      content="%sveltekit.assets%/hero-background.jpg"
-    />
-    <meta
-      name="twitter:image:alt"
-      content="StarkHacks - World's Largest Hardware Hackathon"
+      content="Stark Hacks is the world's largest hardware hackathon and the premier Purdue hardware hackathon, a 36-hour engineering marathon where ideas come off the screen and into real circuits. This Indiana hardware hackathon brings together hundreds of students from Purdue University and beyond to build innovative hardware projects."
     />
 
     <!-- Additional Meta Tags -->
