--- a/src/app.html
+++ b/src/app.html
@@ -44,7 +44,7 @@
     />
     <meta
       name="description"
-      content="Stark Hacks is the world's largest hardware hackathon and the premier Purdue hardware hackathon, a 36-hour engineering marathon where ideas come off the screen and into real circuits. This Indiana hardware hackathon brings together hundreds of students from Purdue University and beyond to build innovative hardware projects. Organized by the Humanoid Robot Club at Purdue University, we're setting an official World Record for World's Largest Hardware Hackathon."
+      content="StarkHacks is the world's largest hardware hackathon at Purdue University. A 36-hour engineering marathon setting an official Guinness World Record. April 17-19, 2026."
     />
     <meta
       name="keywords"
@@ -69,7 +69,7 @@
     />
     <meta
       property="og:description"
-      content="Stark Hacks is the world's largest hardware hackathon and the premier Purdue hardware hackathon, a 36-hour engineering marathon where ideas come off the screen and into real circuits. This Indiana hardware hackathon brings together hundreds of students from Purdue University and beyond to build innovative hardware projects. Organized by the Humanoid Robot Club at Purdue University, we're setting an official World Record for World's Largest Hardware Hackathon."
+      content="StarkHacks is the world's largest hardware hackathon at Purdue University. A 36-hour engineering marathon setting an official Guinness World Record. April 17-19, 2026."
     />
     <meta property="og:site_name" content="StarkHacks" />
     <meta property="og:locale" content="en_US" />
@@ -83,7 +83,7 @@
     />
     <meta
       name="twitter:description"
-      content="Stark Hacks is the world's largest hardware hackathon and the premier Purdue hardware hackathon, a 36-hour engineering marathon where ideas come off the screen and into real circuits. This Indiana hardware hackathon brings together hundreds of students from Purdue University and beyond to build innovative hardware projects."
+      content="StarkHacks is the world's largest hardware hackathon at Purdue University. A 36-hour engineering marathon setting an official Guinness World Record. April 17-19, 2026."
     />
 
     <!-- Additional Meta Tags -->
