Update meta description for Google: 1000+ students, hardware innovations, free 3D printers & workshops

--- a/src/app.html
+++ b/src/app.html
@@ -44,7 +44,7 @@
     />
     <meta
       name="description"
-      content="StarkHacks is the world's largest hardware hackathon at Purdue University. A 36-hour engineering marathon setting an official Guinness World Record. April 17-19, 2026."
+      content="Join 1000+ students at the World's Largest hardware Hackathon to build hardware innovations. Free 3D Printers, sensors, motors, & tons of workshops. April 17-19 2026 at Purdue University."
     />
     <meta
       name="keywords"
@@ -69,7 +69,7 @@
     />
     <meta
       property="og:description"
-      content="StarkHacks is the world's largest hardware hackathon at Purdue University. A 36-hour engineering marathon setting an official Guinness World Record. April 17-19, 2026."
+      content="Join 1000+ students at the World's Largest hardware Hackathon to build hardware innovations. Free 3D Printers, sensors, motors, & tons of workshops. April 17-19 2026 at Purdue University."
     />
     <meta property="og:site_name" content="StarkHacks" />
     <meta property="og:locale" content="en_US" />
@@ -83,7 +83,7 @@
     />
     <meta
       name="twitter:description"
-      content="StarkHacks is the world's largest hardware hackathon at Purdue University. A 36-hour engineering marathon setting an official Guinness World Record. April 17-19, 2026."
+      content="Join 1000+ students at the World's Largest hardware Hackathon to build hardware innovations. Free 3D Printers, sensors, motors, & tons of workshops. April 17-19 2026 at Purdue University."
     />
 
     <!-- Additional Meta Tags -->
