Update meta description: Guinness Record, machining tools, April 17-19 2026

--- a/src/app.html
+++ b/src/app.html
@@ -44,7 +44,7 @@
     />
     <meta
       name="description"
-      content="Join 1000+ students at the World's Largest hardware Hackathon to build hardware innovations. Free 3D Printers, sensors, motors, & tons of workshops. April 17-19 2026 at Purdue University."
+      content="Join 1000+ students and set an Official Guinness Record at the World's Largest hardware Hackathon. Free 3D Printers, machining tools, sensors, motors, & tons of workshops. April 17-19, 2026 at Purdue University."
     />
     <meta
       name="keywords"
@@ -69,7 +69,7 @@
     />
     <meta
       property="og:description"
-      content="Join 1000+ students at the World's Largest hardware Hackathon to build hardware innovations. Free 3D Printers, sensors, motors, & tons of workshops. April 17-19 2026 at Purdue University."
+      content="Join 1000+ students and set an Official Guinness Record at the World's Largest hardware Hackathon. Free 3D Printers, machining tools, sensors, motors, & tons of workshops. April 17-19, 2026 at Purdue University."
     />
     <meta property="og:site_name" content="StarkHacks" />
     <meta property="og:locale" content="en_US" />
@@ -83,7 +83,7 @@
     />
     <meta
       name="twitter:description"
-      content="Join 1000+ students at the World's Largest hardware Hackathon to build hardware innovations. Free 3D Printers, sensors, motors, & tons of workshops. April 17-19 2026 at Purdue University."
+      content="Join 1000+ students and set an Official Guinness Record at the World's Largest hardware Hackathon. Free 3D Printers, machining tools, sensors, motors, & tons of workshops. April 17-19, 2026 at Purdue University."
     />
 
     <!-- Additional Meta Tags -->
