--- a/src/app.html
+++ b/src/app.html
@@ -98,6 +98,18 @@
     data-sveltekit-preload-data="hover"
     style="background-color: transparent"
   >
+    <!-- MLH Trust Badge 2026 -->
+    <a
+      id="mlh-trust-badge"
+      style="display:block;max-width:100px;min-width:60px;position:fixed;right:50px;top:0;width:10%;z-index:10000"
+      href="https://mlh.io/na?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2026-season&utm_content=black"
+      target="_blank"
+      rel="noopener noreferrer"
+    ><img
+        src="https://s3.amazonaws.com/logged-assets/trust-badge/2026/mlh-trust-badge-2026-black.svg"
+        alt="Major League Hacking 2026 Hackathon Season"
+        style="width:100%"
+    /></a>
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
