fix: restore mobile/desktop parity across homepage and public routes
- Remove mobile-only content suppression; all sections now visible on mobile
- Refactor absolute top-calc section stacking into natural document flow
- Restore FAQ, Apply CTA, and Speakers title visibility with readable typography
- Stack FAQ boxes vertically on mobile with 44px touch targets
- Make MLH badge responsive (lower z-index on mobile to avoid nav overlap)
- Add safe-area-inset-top to nav and responsive badge sizing
- Fix coming-soon and error routes for mobile viewport
- Use full-hero.jpg for both desktop and mobile backgrounds

--- a/src/app.html
+++ b/src/app.html
@@ -99,9 +99,38 @@
     style="background-color: transparent"
   >
     <!-- MLH Trust Badge 2026 -->
+    <style>
+      #mlh-trust-badge {
+        display: block;
+        max-width: 100px;
+        min-width: 60px;
+        position: fixed;
+        right: 50px;
+        top: 0;
+        width: 10%;
+        z-index: 10000;
+      }
+      @media (max-width: 1024px) {
+        #mlh-trust-badge {
+          right: 8px;
+          width: 60px;
+          min-width: 45px;
+          max-width: 60px;
+          /* Lower z-index so nav toggle stays clickable */
+          z-index: 999;
+        }
+      }
+      @media (max-width: 480px) {
+        #mlh-trust-badge {
+          right: 4px;
+          width: 50px;
+          min-width: 40px;
+          max-width: 50px;
+        }
+      }
+    </style>
     <a
       id="mlh-trust-badge"
-      style="display:block;max-width:100px;min-width:60px;position:fixed;right:50px;top:0;width:10%;z-index:10000"
       href="https://mlh.io/na?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2026-season&utm_content=black"
       target="_blank"
       rel="noopener noreferrer"
